RESOLVED FIXED235082
[JSC] Fix kind of error thrown by wasm module creation
https://bugs.webkit.org/show_bug.cgi?id=235082
Summary [JSC] Fix kind of error thrown by wasm module creation
Yusuke Suzuki
Reported 2022-01-11 14:02:11 PST
[JSC] Fix kind of error thrown by wasm module creation
Attachments
Patch (1.71 KB, patch)
2022-01-11 14:03 PST, Yusuke Suzuki
msaboff: review+
Yusuke Suzuki
Comment 1 2022-01-11 14:03:07 PST
Michael Saboff
Comment 2 2022-01-11 14:05:17 PST
Comment on attachment 448876 [details] Patch r=me
Yusuke Suzuki
Comment 3 2022-01-11 14:08:21 PST
Comment on attachment 448876 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=448876&action=review > Source/JavaScriptCore/wasm/js/JSWebAssemblyModule.cpp:58 > if (UNLIKELY(!error)) { I'll also remove RETURN_IF_EXCEPTION thing in L49 since this is not necessary. createJSWebAssemblyCompileError will not throw. So, the code should be aligned to L61.
Yusuke Suzuki
Comment 4 2022-01-11 15:41:37 PST
Radar WebKit Bug Importer
Comment 5 2022-01-11 15:42:16 PST
Note You need to log in before you can comment on or make changes to this bug.