[JSC] Fix kind of error thrown by wasm module creation https://bugs.webkit.org/show_bug.cgi?id=235082

Reviewed by Michael Saboff.

It should throw WebAssembly.CompileError instead of WebAssembly.LinkError.
This fixes occasional failure in wasm imports-oom.js test.

* wasm/js/JSWebAssemblyModule.cpp:
(JSC::JSWebAssemblyModule::createStub):


Canonical link: https://commits.webkit.org/245937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287901 268f45cc-cd09-0410-ab3c-d52691b4dbfc